# subspace

./: .coveragerc  .env.template  .flake8  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
apps/content/: admin.py  forms.py  models.py  permissions.py  serializers.py  tests.py  tests_api.py  urls.py  urls_api.py  views.py  views_api.py
apps/content/migrations/: 0001_initial.py
apps/content/templates/: base.html
apps/content/templates/content/: confirm_delete.html  detail.html  form.html  list.html
apps/payments/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  urls_api.py  views.py  views_api.py
apps/payments/migrations/: 0001_initial.py  0002_subscription_is_cancelled.py
apps/users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  urls_api.py  views.py  views_api.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
apps/users/templates/users/: account.html  login.html  register.html  verify_code.html
config/: api_urls.py  settings.py  urls.py
nginx/: nginx.conf
